Fixed header spacing and Readme - misc. Cleanup

--- a/client/src/components/layout/Layout.css
+++ b/client/src/components/layout/Layout.css
@@ -6,6 +6,6 @@
 
 .main-content {
   flex: 1;
-  padding-top: 40px;
+  padding-top: var(--header-height);
   width: 100%;
 }
